syntax="proto3";

package protobuf;

option go_package = ".";

message PageRequest {
  // current page number.
  int32 page_num = 1;

  // maximum size of the page.
  int32 page_size = 2;
}

// pagination information to be returned
message PageInfo {
  // current page number.
  int32 page_num = 1;

  // maximum size of the page.
  int32 page_size = 2;

  // number of items displayed on this page.
  int32 size = 3;

  // total count of all items.
  int64 total_items = 4;

  // total pages.
  int32 total_pages = 5;
}